[gd_scene load_steps=12 format=2]

[ext_resource path="res://HUD scenes/ShopInfo.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD scenes/Shop.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/Fonts/Kenney Pixel.ttf"

[sub_resource type="DynamicFont" id=10]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.996078, 0.0823529, 0.0117647, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.054902, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.921569, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.533333, 0.243137, 0.243137, 1 )

[node name="Shop" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ShopBoxRect" type="ColorRect" parent="."]
anchor_left = 0.693
anchor_right = 1.0
anchor_bottom = 0.842
margin_left = 0.367981
margin_top = 1.25992
margin_bottom = 0.0598755
color = Color( 0.345098, 0.235294, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopName" type="RichTextLabel" parent="ShopBoxRect"]
anchor_right = 1.0
anchor_bottom = 0.123
margin_left = 25.8252
margin_right = -28.1748
margin_bottom = 0.00800323
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 10 )
text = "Element Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower1" type="Button" parent="."]
anchor_left = 0.771
anchor_top = 0.158
anchor_right = 0.8
anchor_bottom = 0.208
margin_left = -1.39844
margin_top = 0.0984955
margin_right = -1.09442
margin_bottom = 0.0979996
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower2" type="Button" parent="."]
anchor_left = 0.82
anchor_top = 0.158
anchor_right = 0.849
anchor_bottom = 0.208
margin_left = 0.0129395
margin_top = 0.0984955
margin_right = 0.316956
margin_bottom = 0.0979996
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower3" type="Button" parent="."]
anchor_left = 0.869
anchor_top = 0.158
anchor_right = 0.898
anchor_bottom = 0.208
margin_left = -1.75043
margin_top = 0.0984955
margin_right = -1.44647
margin_bottom = 0.0979996
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower4" type="Button" parent="."]
anchor_left = 0.791
anchor_top = 0.241
anchor_right = 0.82
anchor_bottom = 0.291
margin_left = -1.87842
margin_top = -1.28941
margin_right = -1.57446
margin_bottom = -1.28941
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tower5" type="Button" parent="."]
anchor_left = 0.849
anchor_top = 0.241
anchor_right = 0.879
anchor_bottom = 0.291
margin_left = 0.316956
margin_top = 0.297989
margin_right = -0.403076
margin_bottom = 0.297989
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopInfo" parent="." instance=ExtResource( 1 )]
[connection signal="pressed" from="Tower1" to="." method="_on_Tower1_pressed"]
[connection signal="pressed" from="Tower2" to="." method="_on_Tower2_pressed"]
[connection signal="pressed" from="Tower3" to="." method="_on_Tower3_pressed"]
[connection signal="pressed" from="Tower4" to="." method="_on_Tower4_pressed"]
[connection signal="pressed" from="Tower5" to="." method="_on_Tower5_pressed"]
